--- a/settings/project.json
+++ b/settings/project.json
@@ -14,54 +14,69 @@
   ],
   "collision-matrix": [
     [
+      true,
+      null,
+      null,
+      true,
+      null,
+      false
+    ],
+    [
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      null,
+      true
+    ],
+    [
+      true,
+      false,
+      true,
+      false,
+      true,
+      true,
+      true,
       true
     ],
     [
       false,
-      false
+      false,
+      false,
+      true,
+      false,
+      true
     ],
     [
       false,
       false,
-      false
-    ],
-    [
+      true,
+      true,
+      true,
       false,
-      false,
-      false,
-      false
-    ],
-    [
-      false,
-      false,
-      false,
-      false,
-      false
-    ],
-    [
-      false,
-      false,
-      false,
-      false,
-      false,
-      false
+      true,
+      true
     ],
     [
       false,
       false,
       false,
+      true,
       false,
-      false,
-      false,
+      true,
       false
     ],
     [
       false,
       false,
       false,
+      true,
       false,
-      false,
-      false,
+      true,
       false,
       false
     ]
