--- a/settings/project.json
+++ b/settings/project.json
@@ -31,6 +31,8 @@
       true,
       true,
       null,
+      true,
+      null,
       true
     ],
     [
@@ -73,7 +75,7 @@
     [
       false,
       false,
-      false,
+      true,
       true,
       false,
       true,
