--- a/settings/project.json
+++ b/settings/project.json
@@ -8,16 +8,17 @@
     "wall",
     "alchemist",
     "visitor",
-    "posion",
+    "potion",
     "bench",
-    "cat"
+    "cat",
+    "potionFactory"
   ],
   "collision-matrix": [
     [
       true,
       null,
       null,
-      true,
+      false,
       null,
       false
     ],
@@ -31,13 +32,16 @@
       true,
       true,
       null,
+      true,
+      null,
       true
     ],
     [
-      true,
+      false,
       false,
       true,
       false,
+      true,
       true,
       true,
       true,
@@ -73,10 +77,21 @@
     [
       false,
       false,
-      false,
+      true,
       true,
       false,
       true,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      false,
+      false,
+      false,
       false,
       false
     ]
