--- a/settings/project.json
+++ b/settings/project.json
@@ -34,34 +34,17 @@
       null,
       true,
       null,
-      true
-    ],
-    [
-      false,
-      false,
-      true,
-      false,
-      true,
-      true,
-      true,
       true,
       true
     ],
     [
       false,
       false,
-      false,
       true,
-      false,
-      true
-    ],
-    [
-      false,
       false,
       true,
       true,
       true,
-      false,
       true,
       true
     ],
@@ -71,7 +54,27 @@
       false,
       true,
       false,
+      true
+    ],
+    [
+      false,
+      false,
       true,
+      true,
+      true,
+      false,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      false,
+      true,
+      false,
+      null,
       false
     ],
     [
@@ -82,17 +85,18 @@
       false,
       true,
       false,
-      false
+      false,
+      true
     ],
     [
       false,
       false,
-      false,
+      true,
       true,
       false,
       false,
       false,
-      false,
+      true,
       false
     ]
   ],
