--- a/settings/project.json
+++ b/settings/project.json
@@ -11,7 +11,9 @@
     "potion",
     "bench",
     "cat",
-    "potionFactory"
+    "potionFactory",
+    "hall",
+    "catLimit"
   ],
   "collision-matrix": [
     [
@@ -46,6 +48,7 @@
       true,
       true,
       true,
+      true,
       true
     ],
     [
@@ -86,6 +89,8 @@
       true,
       false,
       false,
+      true,
+      null,
       true
     ],
     [
@@ -97,6 +102,31 @@
       false,
       false,
       true,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      false,
+      false,
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      false,
+      false,
+      true,
+      false,
+      false,
       false
     ]
   ],
