add pseudo 3d art effect

--- a/settings/project.json
+++ b/settings/project.json
@@ -13,7 +13,8 @@
     "cat",
     "potionFactory",
     "hall",
-    "catLimit"
+    "catLimit",
+    "table"
   ],
   "collision-matrix": [
     [
@@ -49,6 +50,8 @@
       true,
       true,
       true,
+      true,
+      null,
       true
     ],
     [
@@ -66,6 +69,7 @@
       true,
       true,
       false,
+      true,
       true,
       true
     ],
@@ -91,6 +95,7 @@
       false,
       true,
       null,
+      true,
       true
     ],
     [
@@ -99,7 +104,7 @@
       true,
       true,
       false,
-      false,
+      true,
       false,
       true,
       false
@@ -125,6 +130,20 @@
       false,
       false,
       true,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
+      false,
+      false,
+      false,
+      true,
+      false,
       false,
       false,
       false
